--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -12,30 +12,30 @@
 }
 
 @*<div></div>
-@if (movie == null || movieLink == null)
-{
+    @if (movie == null || movieLink == null)
+    {
     @if (canWatch == null)
     {
-        <div>Loadding</div>
+    <div>Loadding</div>
     }
     else if (canWatch == false)
     {
 
-        string linkVip = $"BuyVip/{Id}";
-        <div>Need to buy</div>
-        <div>
-            <NavLink class="nav-link" href="@linkVip">Buy</NavLink>
-        </div>
+    string linkVip = $"BuyVip/{Id}";
+    <div>Need to buy</div>
+    <div>
+    <NavLink class="nav-link" href="@linkVip">Buy</NavLink>
+    </div>
     }
-}
-else
-{
+    }
+    else
+    {
 
     if (sameDevice)
     {
-        <video src="@movieLink" width="1280" height="720" controls @onplay="View"></video>
+    <video src="@movieLink" width="1280" height="720" controls @onplay="View"></video>
     }
-}*@
+    }*@
 
 @*<div></div>
 
@@ -85,9 +85,9 @@ else
                     <div class="d-flex justify-content-center" style="margin: 1%">
                         <NavLink class="btn btn-primary" href="@linkVip">Buy</NavLink>
                     </div>
-                </div>   
+                </div>
             </div>
-                   
+
         }
     }
     else
@@ -103,18 +103,17 @@ else
                             <h5>Movie Overview</h5>
                             <p class="mb-0">
                                 @movie.MoviesDescription   <!-- FIX -->
-                            </p>
+                    </p>
                         </div><!-- / project-info-box -->
 
-                        <div class="project-info-box shadow-sm">
+                <div class="project-info-box shadow-sm">
                             <p><b>Name:</b> @movie.MovieName</p>  <!-- FIX -->
-                            <p><b>Date:</b> @movie.PremiereDate.ToShortDateString()</p> <!-- FIX -->
-                        </div><!-- / project-info-box -->
+                    <p><b>Date:</b> @movie.PremiereDate.ToShortDateString()</p> <!-- FIX -->
+                </div><!-- / project-info-box -->
 
-                        <div class="project-info-box mt-0 mb-0">
-
+                <div class="project-info-box mt-0 mb-0">
                         </div><!-- / project-info-box -->
-                    </div><!-- / column -->
+            </div><!-- / column -->
 
             <div class="col-md-7">
                         <div class="embed-responsive embed-responsive-16by9 shadow-sm">
@@ -125,7 +124,7 @@ else
                         </div>
                         <div class="project-info-box shadow-sm">
                             <p><b>Genre:</b> @movie.MovieGenre</p>  <!-- FIX -->
-                        </div><!-- / project-info-box -->
+                </div><!-- / project-info-box -->
             </div><!-- / column -->
         </div>
             </div>
@@ -148,7 +147,14 @@ else
                                 </div>
                                 <div class="d-flex flex-row-reverse" style="margin: 1%">
                                     <button type="button" class="btn btn-primary" @onclick="@Com">Comment</button>
-                                    <div class="d-flex justify-content-center">@content</div>
+                                    @*<div class="d-flex justify-content-center">@content</div>*@
+                                    @if (showAlert)
+                                    {
+                                        <div class="d-flex justify-content-start">
+                                            <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                        </div>
+                                        
+                                    }
                                 </div>
                             </div>
 
