--- a/BlazorApp3/Client/Pages/Home.razor
+++ b/BlazorApp3/Client/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/home"
+@using Firebase.Storage
 @inject HttpClient Http
 
 
@@ -81,12 +82,41 @@
 </body>
 
 
-
+@foreach(var item in DicImageLink)
+{
+    <img src="@item.Value" />
+}
 @code {
-    private WeatherForecast[] forecasts;
-    
+    private List<MovieModel> movies = new();
+    private readonly Dictionary<string, string> DicImageLink = new();
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        
+            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>("user/Trending");
+        
+        
+         Parallel.ForEach(movies, async item => 
+        {
+            DicImageLink.Add(item.MovieId, null);
+                    
+            try
+            {
+                string ImageLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(item.StudioId).Child(item.MovieId).Child("Image").GetDownloadUrlAsync();
+                if (!DicImageLink.ContainsKey(item.MovieId))
+                {
+                    DicImageLink.Add(item.MovieId, ImageLink);
+                    StateHasChanged();
+                }
+                    else
+                    {
+                        DicImageLink[item.MovieId] = ImageLink;
+                        StateHasChanged();
+                    }
+                }
+                catch
+                {
+                    
+                }
+        });
     }
 }
