--- a/BlazorApp3/Client/Pages/Index.razor
+++ b/BlazorApp3/Client/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using Firebase.Storage
 
 <PageTitle>MovieTV</PageTitle>
 
@@ -78,4 +79,44 @@
   </div>
 </body>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+
+@foreach(var item in DicImageLink)
+{
+    <img src="@item.Value" />
+}
+
+@code{
+    private List<MovieModel> movies = new();
+    private readonly Dictionary<string, string> DicImageLink = new();
+    protected override async Task OnInitializedAsync()
+    {
+        
+            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>("user/Trending");
+        
+        
+         Parallel.ForEach(movies, async item => 
+        {
+            DicImageLink.Add(item.MovieId, null);
+                    
+            try
+            {
+                string ImageLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(item.StudioId).Child(item.MovieId).Child("Image").GetDownloadUrlAsync();
+                if (!DicImageLink.ContainsKey(item.MovieId))
+                {
+                    DicImageLink.Add(item.MovieId, ImageLink);
+                    StateHasChanged();
+                }
+                    else
+                    {
+                        DicImageLink[item.MovieId] = ImageLink;
+                        StateHasChanged();
+                    }
+                }
+                catch
+                {
+                    
+                }
+        });
+    }
+}
