--- a/BlazorApp3/Client/Pages/EditMovieStudio.razor
+++ b/BlazorApp3/Client/Pages/EditMovieStudio.razor
@@ -62,6 +62,7 @@ if(more)
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
 	<div class="container">
 		<input type="checkbox" id="flip">
 		@if (movie == null)
@@ -74,7 +75,7 @@ if(more)
 		{
             if(more)
     {
-        <iframe src="@linkIframe" height="400" width="600"></iframe>
+        <iframe src="@linkIframe" height="800" width="1200"></iframe>
         }
             else
             {
@@ -85,7 +86,10 @@ if(more)
 					<div class="login-form">
 						<div class="title">Replace any data of ID: </div>
 						<div class="title">@movie.MovieId</div>
-						<div>@content</div>
+						    @if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
 						
 						<form action="#">
 							<div class="input-boxes">
@@ -232,7 +236,7 @@ if(more)
 
         private async Task OnChooseImageFile(InputFileChangeEventArgs e)
         {
-            List<string> list = new List<string> { "image/bmp", "image/gif", "image/jpeg", "image/png", "image/svg+xml", "image/tiff", "image/webp" };
+            List<string> list = new List<string> { "image/bmp", "image/gif", "image/jpeg","image/jpg", "image/png", "image/svg+xml", "image/tiff", "image/webp" };
             if (list.Contains(e.File.ContentType))
             {
                 imageFile = (e.File);
