--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -55,13 +55,13 @@
                         <div class="project-info-box mt-0 shadow-sm">
                             <h5>Movie Overview</h5>
                             <p class="mb-0">
-                                @movie.MoviesDescription   <!-- FIX -->
+                                @movie.MoviesDescription   
                             </p>
                         </div><!-- / project-info-box -->
 
                         <div class="project-info-box shadow-sm">
-                            <p><b>Name:</b> @movie.MovieName</p>  <!-- FIX -->
-                            <p><b>Date:</b> @movie.PremiereDate.ToShortDateString()</p> <!-- FIX -->
+                            <p><b>Name:</b> @movie.MovieName</p>  
+                            <p><b>Date:</b> @movie.PremiereDate.ToShortDateString()</p> 
                         </div><!-- / project-info-box -->
 
                         <div class="project-info-box mt-0 mb-0">
@@ -71,13 +71,12 @@
 
             <div class="col-md-7">
                         <div class="embed-responsive embed-responsive-16by9 shadow-sm">
-                            <video width="640" height="360" controls="" class="rounded">
-                                <source src="@movieLink"
-                                type="video/mp4">
+                            <video @onplay="View" width="640" height="360" controls="" class="rounded">
+                                <source src="@movieLink">
                             </video>
                         </div>
                         <div class="project-info-box shadow-sm">
-                            <p><b>Genre:</b> @movie.MovieGenre</p>  <!-- FIX -->
+                            <p><b>Genre:</b> @movie.MovieGenre</p>  
                         </div><!-- / project-info-box -->
             </div><!-- / column -->
         </div>
@@ -241,7 +240,7 @@
             }
             catch (Exception ex)
             {
-                content = "This studio's movie file contains a mistake."; //FIX
+                content = "This studio's movie file contains a mistake."; 
                 severity = Severity.Error;
                 showAlert = true;
             }
