--- a/BlazorApp3/MauiApp2/Pages/Contact.razor
+++ b/BlazorApp3/MauiApp2/Pages/Contact.razor
@@ -8,6 +8,8 @@
 
   <div>@mess </div> *@
 
+<PageTitle>Contact Us</PageTitle>
+
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -68,6 +70,7 @@
   </div>
 
 </body>
+
 @code{
 private readonly FeedbackMessageModel feedbackMessageModel = new();
         private string? content;
