--- a/BlazorApp3/MauiApp2/Pages/Profile.razor
+++ b/BlazorApp3/MauiApp2/Pages/Profile.razor
@@ -6,6 +6,7 @@
 @inject IAccountService _accountService;
 
 @*----------------------------------------------------------------------------------------------------*@
+<PageTitle>Profile</PageTitle>
 
 <head>
 	<meta charset="utf-8">
