--- a/BlazorApp3/Client/Pages/Home.razor
+++ b/BlazorApp3/Client/Pages/Home.razor
@@ -1,41 +1,9 @@
 ﻿@page "/home"
+@using Firebase.Storage
 @inject HttpClient Http
 
-@*<h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
-
-@if (forecasts == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}*@
-
+<PageTitle>MovieTV</PageTitle>
 
 <head>
     <meta charset="utf-8">
@@ -114,11 +82,41 @@ else
 </body>
 
 
-
+@foreach(var item in DicImageLink)
+{
+    <img src="@item.Value" />
+}
 @code {
-    private WeatherForecast[] forecasts;
+    private List<MovieModel> movies = new();
+    private readonly Dictionary<string, string> DicImageLink = new();
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        
+            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>("user/Trending");
+        
+        
+         Parallel.ForEach(movies, async item => 
+        {
+            DicImageLink.Add(item.MovieId, null);
+                    
+            try
+            {
+                string ImageLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(item.StudioId).Child(item.MovieId).Child("Image").GetDownloadUrlAsync();
+                if (!DicImageLink.ContainsKey(item.MovieId))
+                {
+                    DicImageLink.Add(item.MovieId, ImageLink);
+                    StateHasChanged();
+                }
+                    else
+                    {
+                        DicImageLink[item.MovieId] = ImageLink;
+                        StateHasChanged();
+                    }
+                }
+                catch
+                {
+                    
+                }
+        });
     }
 }
