--- a/BlazorMovie/MovieClient/Pages/WatchCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/WatchCustomer.razor
@@ -71,13 +71,13 @@
 
             <div class="col-md-7">
                         <div class="embed-responsive embed-responsive-16by9 shadow-sm">
-<<<<<<< Updated upstream:BlazorMovie/MovieClient/Pages/WatchCustomer.razor
+@*<<<<<<< Updated upstream:BlazorMovie/MovieClient/Pages/WatchCustomer.razor*@
                             <video @onplay="View" width="640" height="360" controls controlsList=”nodownload” class="rounded">
-                                <source src="@movieLink">
-=======
+                                <source src="@movieLink"></video>
+@*=======*@
                             <video @onplay="View" width="640" height="360" controls="" class="rounded">
                                 <source src="@movieLink" type="video/mp4" @onplay="View">
->>>>>>> Stashed changes:BlazorApp3/Client/Pages/WatchCustomer.razor
+@*>>>>>>> Stashed changes:BlazorApp3/Client/Pages/WatchCustomer.razor*@
                             </video>
                         </div>
                         <div class="project-info-box shadow-sm">
