--- a/BlazorMovie/MovieClient/Pages/StatusStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/StatusStudio.razor
@@ -1,4 +1,6 @@
-﻿<h3>StatusStudio</h3>
+﻿<div>
+    <h3>StatusStudio</h3>
+</div>
 @attribute [Authorize(Roles = "Studio")]
 @page "/StatusStudio/{Id}"
 <PageTitle>Studio - Status</PageTitle>
@@ -21,24 +23,36 @@
 
 
     }*@
-<div>Request to salary</div>
-<input type="month" @bind="month" />
-<button @onclick="Salary">Salary</button>
 
-<div>Cash Check</div>
-<input type="month" @bind="check" />
-<button @onclick="Check">Check</button>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="Favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+</head>
+
+@*<div>Request to salary</div>
+    <input type="month" @bind="month" />
+    <button @onclick="Salary">Salary</button>
+
+    <div>Cash Check</div>
+    <input type="month" @bind="check" />
+    <button @onclick="Check">Check</button>
 
 
-<div>Dashboard</div>
-<input type="date" @bind="start" />
-<input type="date" @bind="end" />
+    <div>Dashboard</div>
+    <input type="date" @bind="start" />
+    <input type="date" @bind="end" />
 
-<button @onclick="Submit">Submit</button>
-	@if (showAlert)
-{
+    <button @onclick="Submit">Submit</button>*@
+	@*@if (showAlert)
+    {
     <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+    }*@
 
 @* @if(commentStatus.Count > 1)
     {
@@ -46,23 +60,138 @@
     <div>Negative: @commentStatus[1]</div>
     }*@
 
-@foreach (var status in fullStatus)
+@*@foreach (var status in fullStatus)
 {
-    
-        double[] data = {Double.Parse(status["Positive"]), Double.Parse(status["Negative"])} ;
-        string[] labels = { "Positive", "Negative" };
-    
+
+    double[] data = { Double.Parse(status["Positive"]), Double.Parse(status["Negative"]) };
+    string[] labels = { "Positive", "Negative" };
+    double[] datas = { Double.Parse(status["View"]), Double.Parse(status["Buy"]) };
+    string[] labelss = { "View", "Buy" };
+
     <div>Date: @status["Date"]</div>
     <div>Positive: @status["Positive"]</div>
     <div>Negative: @status["Negative"]</div>
     <div>View: @status["View"]</div>
     <div>Buy: @status["Buy"]</div>
-   
-    <MudPaper Class="pa-4">
-    <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels"></MudChart>
-</MudPaper>
+    <MudContainer>
+        <div>
+            <MudPaper Class="pa-4">
+                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels"></MudChart>
+            </MudPaper>
+        </div>
+        <div>
+            <MudPaper Class="pa-4">
+                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@datas" InputLabels="@labelss"></MudChart>
+            </MudPaper>
+        </div>
+    </MudContainer>
+}*@
 
-}
+
+
+
+<body>
+    <main class="login-form">
+        <div class="cotainer">
+            <div class="row justify-content-center">
+                <div class="row justify-content-center" style="margin:5px">
+                    <div class="col-md">
+                        <div class="card">
+                            <div class="card-header">Status Studio</div>
+                            <div class="card-body">
+
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Salary request</label>
+                                    <div class="col-md-5">
+                                        <input type="date" @bind="month" class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button @onclick="Salary" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Request</button>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Cash check</label>
+                                    <div class="col-md-5">
+                                        <input type="date" @bind="check" class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button @onclick="Check" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Check</button>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 offset-md-4">
+                                    @if (showAlert)
+                                    {
+                                        <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center" style="margin:5px">
+                    <div class="col-md">
+                        <div class="card">
+                            <div class="card-header">Dashboard</div>
+                            <div class="card-body">
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Date start</label>
+                                    <div class="col-md-5">
+                                        <input type="date" @bind="start" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-4 col-form-label text-md-right">Date end</label>
+                                    <div class="col-md-5">
+                                        <input type="date" @bind="end" class="form-control">
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button @onclick="Submit" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Check</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                @foreach (var status in fullStatus)
+                {
+                    double[] data = { Double.Parse(status["Positive"]), Double.Parse(status["Negative"]) };
+                    string[] labels = { "Positive", "Negative" };
+                    double[] datas = { Double.Parse(status["View"]), Double.Parse(status["Buy"]) };
+                    string[] labelss = { "View", "Buy" };
+                    <div class="row justify-content-center" style="margin:5px">
+                        <div class="col-md">
+                            <div class="card">
+                                <div class="card-header">Date: @status["Date"]</div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        @*<div class="col-sm">Date: @status["Date"]</div>*@
+                                        <div class="col-sm">Positive: @status["Positive"]</div>
+                                        <div class="col-sm">Negative: @status["Negative"]</div>
+                                        <div class="col-sm">View: @status["View"]</div>
+                                        <div class="col-sm">Buy: @status["Buy"]</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <MudPaper Class="pa-4">
+                                                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels"></MudChart>
+                                            </MudPaper>
+                                        </div>
+                                        <div class="col-sm">
+                                            <MudPaper Class="pa-4">
+                                                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@datas" InputLabels="@labelss"></MudChart>
+                                            </MudPaper>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </main>
+</body>
 
 
 
