--- a/BlazorMovie/MovieClient/Pages/Home.razor
+++ b/BlazorMovie/MovieClient/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/home"
+@page "/"
 @using Firebase.Storage
 @inject HttpClient Http
 
@@ -8,81 +9,92 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	@*<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>*@
+    @*<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>*@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-	@*<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>*@
+    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>*@
 </head>
 <body>
-<div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-8">
-        <!-- Heading -->
-        <h1 class="mb-4 text-center animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="1" data-animation-trigger="load">
-          Creating beautiful layouts like no one else
-        </h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <h1 class="mb-4 text-center animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="1" data-animation-trigger="load">
+                    NOMINATION MOVIES
+                </h1>
+                <p class="mb-6 text-center text-muted animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="2" data-animation-trigger="load">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas harum aperiam minus corporis, nesciunt nobis quaerat voluptatumunt qui similique.
+                </p>
 
-        <!-- Text -->
-        <p class="mb-6 text-center text-muted animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="2" data-animation-trigger="load">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas harum aperiam minus corporis, nesciunt nobis quaerat voluptatumunt qui similique.
-        </p>
-
-      </div>
-    </div> <!-- / .row -->
-    <div class="row form-row align-items-center">
-      <div class="col-3">
-
-        <div class="img-square">
-          <img src="https://via.placeholder.com/768x512/D3D3D3/000000" alt="..." class="img-cover">
-        </div>
-        
-      </div>
-      <div class="col-6">
-        <div class="row form-row align-items-end mb-2">
-          <div class="col-7">
-            
-            <div class="img-square">
-              <img src="https://via.placeholder.com/768x512/FFB6C1/000000" alt="..." class="img-cover">
             </div>
-
-          </div>
-          <div class="col-5">
-            
-            <div class="img-square">
-              <img src="https://via.placeholder.com/768x512/87CEFA/000000" alt="..." class="img-cover">
-            </div>
-
-          </div>
         </div> <!-- / .row -->
-        <div class="row form-row">
-          <div class="col-5">
-            
-            <div class="img-square">
-              <img src="https://via.placeholder.com/768x512/B0C4DE/000000" alt="..." class="img-cover">
-            </div>
 
-          </div>
-          <div class="col-7">
-            
-            <div class="img-square">
-              <img src="https://via.placeholder.com/768x512/20B2AA/000000" alt="..." class="img-cover">
-            </div>
 
-          </div>
+        <div class="row form-row align-items-center">
+            <div class="col-3">
+
+                <div class="img-square">
+                    <img src="@getLink(0)" alt="..." class="img-cover">
+                </div>
+
+            </div>
+            <div class="col-6">
+                <div class="row form-row align-items-end mb-2">
+                    <div class="col-7">
+
+                        <div class="img-square">
+                            <img src="@getLink(1)" alt="..." class="img-cover">
+                        </div>
+
+                    </div>
+                    <div class="col-5">
+
+                        <div class="img-square">
+                            <img src="@getLink(2)" alt="..." class="img-cover">
+                        </div>
+
+                    </div>
+                </div> <!-- / .row -->
+                <div class="row form-row">
+                    <div class="col-5">
+
+                        <div class="img-square">
+                            <img src="@getLink(3)" alt="..." class="img-cover">
+                        </div>
+
+                    </div>
+                    <div class="col-7">
+
+                        <div class="img-square">
+                            <img src="@getLink(4)" alt="..." class="img-cover">
+                        </div>
+
+                    </div>
+                </div> <!-- / .row -->
+            </div>
+            <div class="col-3">
+
+                <div class="img-square">
+                    <img src="@getLink(5)" alt="..." class="img-cover">
+                </div>
+
+            </div>
         </div> <!-- / .row -->
-      </div>
-      <div class="col-3">
-
-        <div class="img-square">
-          <img src="https://via.placeholder.com/768x512/FFA07A/000000" alt="..." class="img-cover">
-        </div>
-        
-      </div>
-    </div> <!-- / .row -->
-  </div>
+    </div>
 </body>
 
 
-@foreach(var item in DicImageLink)
-{
-    <img src="@item.Value" />
+
+
+
+@code {
+    private string getLink(int index)
+    {
+        try
+        {
+            return DicImageLink.ElementAt(index).Value;
+        }
+        catch
+        {
+            return "https://via.placeholder.com/768x512/FFA07A/000000";
+        }
+    }
 }
