--- a/BlazorMovie/MovieClient/Pages/Home.razor
+++ b/BlazorMovie/MovieClient/Pages/Home.razor
@@ -8,11 +8,14 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <h1 class="mb-4 text-center animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="1" data-animation-trigger="load">
+                <h1 class="mb-4 text-center animate" data-toggle="animation" data-animation="fadeUp"
+                    data-animation-order="1" data-animation-trigger="load">
                     NOMINATION MOVIES
                 </h1>
-                <p class="mb-6 text-center text-muted animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="2" data-animation-trigger="load">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas harum aperiam minus corporis, nesciunt nobis quaerat voluptatumunt qui similique.
+                <p class="mb-6 text-center text-muted animate" data-toggle="animation" data-animation="fadeUp"
+                    data-animation-order="2" data-animation-trigger="load">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas harum aperiam minus
+                    corporis, nesciunt nobis quaerat voluptatumunt qui similique.
                 </p>
 
             </div>
@@ -71,9 +74,3 @@
         </div> <!-- / .row -->
     </div>
 </body>
-
-
-
-
-
-
