--- a/BlazorMovie/MovieClient/Pages/ResetPassword.razor
+++ b/BlazorMovie/MovieClient/Pages/ResetPassword.razor
@@ -12,10 +12,12 @@
 						<h3><i class="fa fa-lock fa-4x"></i></h3>
 						<h2 class="text-center">Forgot Password?</h2>
 						<p>You can reset your password here.</p>
-							@if (showAlert)
-{
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+						@if (showAlert)
+						{
+							<MudAlert Severity="severity" Variant="Variant.Filled"
+							ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true"
+							CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+						}
 
 						<div class="panel-body">
 
@@ -43,6 +45,3 @@
 		</div>
 	</div>
 </div>
-
-
-
