--- a/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
@@ -5,9 +5,10 @@
 @attribute [Authorize(Roles = "Studio")]
 @using System.Text.RegularExpressions
 
-	@if (showAlert)
+@if (showAlert)
 {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center"
+    ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
 }
 
 @*<div>Email</div>
@@ -55,7 +56,8 @@
                                     <div class="form-group row">
                                         <label class="col-md-4 col-form-label text-md-right">Cash</label>
                                         <div class="col-md-8">
-                                            <input type="number" class="form-control" step="0.01" @bind="@Cash" required>
+                                            <input type="number" class="form-control" step="0.01" @bind="@Cash"
+                                                required>
                                         </div>
                                     </div>
                                     <div class="col-md-6 offset-md-4">
@@ -78,8 +80,3 @@
     </main>
 
 </body>
-
-
-
-
-
