--- a/BlazorMovie/MovieClient/Pages/StatusStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/StatusStudio.razor
@@ -39,9 +39,10 @@
     <input type="date" @bind="end" />
 
     <button @onclick="Submit">Submit</button>*@
-	@*@if (showAlert)
+@*@if (showAlert)
     {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center"
+    ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
     }*@
 
 @* @if(commentStatus.Count > 1)
@@ -51,7 +52,7 @@
     }*@
 
 @*@foreach (var status in fullStatus)
-{
+    {
 
     double[] data = { Double.Parse(status["Positive"]), Double.Parse(status["Negative"]) };
     string[] labels = { "Positive", "Negative" };
@@ -64,18 +65,18 @@
     <div>View: @status["View"]</div>
     <div>Buy: @status["Buy"]</div>
     <MudContainer>
-        <div>
-            <MudPaper Class="pa-4">
-                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels"></MudChart>
-            </MudPaper>
-        </div>
-        <div>
-            <MudPaper Class="pa-4">
-                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@datas" InputLabels="@labelss"></MudChart>
-            </MudPaper>
-        </div>
+    <div>
+    <MudPaper Class="pa-4">
+    <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels"></MudChart>
+    </MudPaper>
+    </div>
+    <div>
+    <MudPaper Class="pa-4">
+    <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@datas" InputLabels="@labelss"></MudChart>
+    </MudPaper>
+    </div>
     </MudContainer>
-}*@
+    }*@
 
 
 
@@ -96,7 +97,8 @@
                                         <input type="date" @bind="month" class="form-control">
                                     </div>
                                     <div class="col-md-3">
-                                        <button @onclick="Salary" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Request</button>
+                                        <button @onclick="Salary" class="btn btn-primary"
+                                            style="margin: 5px; height:38px; width: 88px">Request</button>
                                     </div>
                                 </div>
 
@@ -106,13 +108,16 @@
                                         <input type="date" @bind="check" class="form-control">
                                     </div>
                                     <div class="col-md-3">
-                                        <button @onclick="Check" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Check</button>
+                                        <button @onclick="Check" class="btn btn-primary"
+                                            style="margin: 5px; height:38px; width: 88px">Check</button>
                                     </div>
                                 </div>
                                 <div class="col-md-6 offset-md-4">
                                     @if (showAlert)
                                     {
-                                        <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                        <MudAlert Severity="severity" Variant="Variant.Filled"
+                                        ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true"
+                                        CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
                                     }
                                 </div>
                             </div>
@@ -136,7 +141,8 @@
                                         <input type="date" @bind="end" class="form-control">
                                     </div>
                                     <div class="col-md-3">
-                                        <button @onclick="Submit" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Check</button>
+                                        <button @onclick="Submit" class="btn btn-primary"
+                                            style="margin: 5px; height:38px; width: 88px">Check</button>
                                     </div>
                                 </div>
                             </div>
@@ -164,12 +170,14 @@
                                     <div class="row">
                                         <div class="col-sm">
                                             <MudPaper Class="pa-4">
-                                                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels"></MudChart>
+                                                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px"
+                                                InputData="@data" InputLabels="@labels"></MudChart>
                                             </MudPaper>
                                         </div>
                                         <div class="col-sm">
                                             <MudPaper Class="pa-4">
-                                                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@datas" InputLabels="@labelss"></MudChart>
+                                                <MudChart ChartType="ChartType.Donut" Width="300px" Height="300px"
+                                                InputData="@datas" InputLabels="@labelss"></MudChart>
                                             </MudPaper>
                                         </div>
                                     </div>
@@ -182,7 +190,3 @@
         </div>
     </main>
 </body>
-
-
-
-
